# Git-CMake-tests

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh
ThirdParties/: CMakeLists.txt
src/: BackendHandlerFactory.cpp  BackendHandlerFactory.h  BackendServer.cpp  BackendServer.h  CpuRequestHandler.cpp  CpuRequestHandler.h  HTTPTimeServer.cpp  LogRequestHandler.cpp  LogRequestHandler.h  LoginRequestHandler.cpp  LoginRequestHandler.h  RegisterRequestHandler.cpp  RegisterRequestHandler.h  TimeRequestHandler.cpp  TimeRequestHandler.h  mongo_hello.cpp  tests.cpp  uuid.cpp
